# sshm

./: .gitignore  CHANGELOG.md  Cargo.toml  Changes.md  README.md
.github/worflows/: build.yml
.github/workflows/: build.yml  release.yml
Formula/: default.rb  sshm.rb
debian/: changelog  control  copyright  rules
scripts/: build-deb.sh
src/: history.rs  i18n.rs  lib.rs  main.rs  models.rs  os.rs  util.rs
src/commands/: connect.rs  crud.rs  list.rs  mod.rs  tags.rs
src/config/: export.rs  io.rs  mod.rs  path.rs  settings.rs
src/filter/: matcher.rs  mod.rs
src/import/: ssh_config.rs
src/kluster/: apple.rs  db.rs  docker.rs  incus.rs  kube.rs  mod.rs  models.rs  shell.rs
src/locales/: en.toml  fr.toml
src/sftp/: fs.rs
src/ssh/: add_identity.rs  agent.rs  client.rs  keys.rs  known_hosts.rs  mod.rs  proxy.rs
src/tui/: app.rs  app_sftp.rs  functions.rs  health.rs  help.rs  mod.rs  theme.rs  view_detail.rs
src/tui/app/: cluster_form.rs  fanout.rs  health_worker.rs  host_form.rs  key_flows.rs  kluster_actions.rs  kluster_worker.rs  mod.rs  tunnels.rs
src/tui/char/: mod.rs  q.rs
src/tui/ssh/: deletebox.rs  detailbox.rs  folder_form_state.rs  helpbox.rs  host_form_state.rs  listitems.rs  mod.rs  modal.rs  portforward.rs  toast.rs
src/tui/tabs/: help_tab.rs  identities_tab.rs  kluster_detail.rs  kluster_tab.rs  mod.rs  settings_tab.rs  tab_bar.rs  theme_tab.rs
