[package]
name = "sshm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
serde_json = "1.0.140"
inquire = { version = "0.7.5", default-features = true }
prettytable = "0.10.0"
ssh_config = "0.1.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
regex = "1.11.1"
shellexpand = "3"
toml = "0.9.10"
openssh-sftp-client = "0.15.4"
async-ssh2-lite = { version = "0.5.0", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
