[package]
name = "sshm"
version = "1.0.4"
edition = "2021"
description = "Fast, modern SSH host manager for the terminal"
authors = ["Sn0wAlice"]
license = "Apache-2.0"
repository = "https://github.com/Sn0wAlice/sshm"
homepage = "https://github.com/Sn0wAlice/sshm"
readme = "README.md"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
serde_json = "1.0.140"
inquire = { version = "0.7.5", default-features = true }
prettytable = "0.10.0"
ssh_config = "0.1.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
regex = "1.11.1"
fuzzy-matcher = "0.3"
shellexpand = "3"
toml = "0.9.10"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
vendored-openssl = ["openssl"]
